# ArduinoCloudValveCtrl

./: .gitignore  ArduinoCloudValveCtrl.ino  CMakeLists.txt  CMakePresets.json  README.md  install_vscode_extension.sh  thingProperties.h
Templates/: arduino-cloud-secrets-template.h  arduino-cloud-template.h  wifi-config-template.h
cmake/: CPM.cmake
docs/: 2023-12-10T154126.xlsx  84476752.xlsx  class_diagram.puml  sequence_diagram.puml
includes/: limit_switch.h  my_math.h  pin.h  relay.h  valve.h
src/: CMakeLists.txt  limit_switch.cpp  my_math.cpp  pin.cpp  relay.cpp  valve.cpp
tests/: CMakeLists.txt  test_limit_switch.cpp  test_main.cpp  test_my_math.cpp  test_relay.cpp  test_valve.cpp
